--- a/Archivos/descarga.html
+++ b/Archivos/descarga.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Esta es una página con una foto dentro de una subcarpeta</h1>
     <p><img src="descarga.jpg" alt=""></p>
-    <p><a href="/6A.Enlaces I.html">Atras</a></p>
+    <p><a href="../6A.Enlaces I.html">Atras</a></p>
     <a href="../index.html">Volver a Index (página principal)</a>
 </body>
 </html>
