--- a/3.Elementos de bloque y de línea.html
+++ b/3.Elementos de bloque y de línea.html
@@ -10,7 +10,7 @@
 <h2>Una explicación de porqué algunos elementos se comportan de manera distinta.</h2>
 <p style="border: 2px solid red;">El párrafo es un elemento de bloque y ocupa todo el ancho del navegador. El siguiente elemento va debajo.</p>
 <div>El div es otro elemento de bloque que ocupa todo el ancho</div>
-<p style="border: 2px solid blue;"><img src="../Pagina videotutoriales/Archivos/descarga.jpg" alt="paisaje"><img src="../Pagina videotutoriales/Archivos/Imagen1.png" alt="foto">
+<p style="border: 2px solid blue;"><img src="/Archivos/descarga.jpg" alt="paisaje"><img src="../Pagina videotutoriales/Archivos/Imagen1.png" alt="foto">
     <a href="">Los enlaces como las imágenes son elementos de línea, van seguidos como las letras de una línea</a></p>
 <br>
 <p>Para poner una imagen debajo de otra podemos meter cada imagen
@@ -19,7 +19,7 @@
 <p style="border: 2px solid yellow;"><img src="../Pagina videotutoriales/Archivos/Imagen1.png" alt="foto"></p>
 <br>
 <p>También se puede utilizar la etiqueta "br" para poner una debajo de otra, pero seguirían estando en el mismo párrafo.</p>   
-<img src="../Pagina videotutoriales/Archivos/descarga.jpg" alt="paisaje"> <br> <img src="../Pagina videotutoriales/Archivos/Imagen1.png" alt="foto">
+<img src="..Pagina videotutoriales/Archivos/descarga.jpg" alt="paisaje"> <br> <img src="../Pagina videotutoriales/Archivos/Imagen1.png" alt="foto">
 <br><br><br>
 <p><a href="index.html">Volver</a></p>
 </body>
