--- a/3.Elementos de bloque y de línea.html
+++ b/3.Elementos de bloque y de línea.html
@@ -19,7 +19,7 @@
 <p style="border: 2px solid yellow;"><img src="Archivos/Imagen1.png" alt="foto"></p>
 <br>
 <p>También se puede utilizar la etiqueta "br" para poner una debajo de otra, pero seguirían estando en el mismo párrafo.</p>   
-<img src="Archivos/descarga.jpg" alt="paisaje"> <br> <img src="Imagen1.png" alt="foto">
+<img src="Archivos/descarga.jpg" alt="paisaje"> <br> <img src="Archivos/Imagen1.png" alt="foto">
 <br><br><br>
 <p><a href="index.html">Volver</a></p>
 </body>
