--- a/7.Enlaces II.html
+++ b/7.Enlaces II.html
@@ -49,6 +49,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus doloremque deleniti ea pariatur modi magnam odit omnis. Dignissimos a illo quia repellendus quae architecto eos, quam nobis perferendis distinctio.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus doloremque deleniti ea pariatur modi magnam odit omnis. Dignissimos a illo quia repellendus quae architecto eos, quam nobis perferendis distinctio.</p>
     <a href="#Enlaces II">Volver a inicio</a>
+<br><br><br>
+    <p><a href="index.html">Volver a index</a></p>
     
 
 
