--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <a href="4.Párrafos.html">4. Párrafos</a><br>
     <a href="5.Etiqueta Style, formato de texto y comentarios.html">5. Etiqueta Style, formato de texto y comentarios</a><br>
     <a href="6A.Enlaces I.html">6A. Enlaces I</Img></a><br>
-    <a href="">6B. Publicar nuestras páginas en GitHub</a><br>
-    <a href="">7. Enlaces II</a><br>
+    <a href="6B.Publicar nuestra web en GitHub.html">6B. Publicar nuestras páginas en GitHub</a><br>
+    <a href="7.Enlaces II.html">7. Enlaces II</a><br>
     <a href="">8. Listas</a><br>
     <a href="">9. Tablas</a><br>
     <a href="">10. Formularios I</a><br>
