--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a href="6A.Enlaces I.html">6A. Enlaces I</Img></a><br>
     <a href="6B.Publicar nuestra web en GitHub.html">6B. Publicar nuestras páginas en GitHub</a><br>
     <a href="7.Enlaces II.html">7. Enlaces II</a><br>
-    <a href="">8. Listas</a><br>
-    <a href="">9. Tablas</a><br>
+    <a href="8.Listas.html">8. Listas</a><br>
+    <a href="9.Tablas.html">9. Tablas</a><br>
     <a href="">10. Formularios I</a><br>
     <a href="">11. Formularios II (Tipos de Inputs)</a><br>
     <a href="">12. Formularios III (Algunos atributos de formularios)</a><br>
