--- a/6B.Publicar nuestra web en GitHub.html
+++ b/6B.Publicar nuestra web en GitHub.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    h1 Publicar nuestra web en GitHub</h1>
+    <h1>Publicar nuestra web en GitHub</h1> 
     <p>Para publicar nuestra web en GitHub, primero necesitamos crear una cuenta en GitHub si no tenemos una.</p>
-    <p>Esta página carece de enlaces, imágenes y queda demostrada la visualizacion del tutoria
+    <p>Esta página carece de enlaces, imágenes y queda demostrada la visualizacion del tutorial
          gracias a la creación del propio link de la página en GitHub.</p>
-   
+   <p><a href="index.html">Volver</a></p>
 </body>
 </html>
