--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <a href="7.Enlaces II.html">7. Enlaces II</a><br>
     <a href="8.Listas.html">8. Listas</a><br>
     <a href="9.Tablas.html">9. Tablas</a><br>
-    <a href="">10. Formularios I</a><br>
-    <a href="">11. Formularios II (Tipos de Inputs)</a><br>
-    <a href="">12. Formularios III (Algunos atributos de formularios)</a><br>
-    <a href="">VIDEO DE AYUDA: UTILIZAR GitHub como hosting</U></a>
+    <a href="10.Fomularios I.html">10. Formularios I</a><br>
+    <a href="11.Formularios II (Tipos de Inputs).html">11. Formularios II (Tipos de Inputs)</a><br>
+    <a href="12. Formularios III (Algunos atributos de formularios).html">12. Formularios III (Algunos atributos de formularios)</a><br>
+    <a href="VIDEO DE AYUDA_UTILIZAR GitHub como hosting.html">VIDEO DE AYUDA: UTILIZAR GitHub como hosting</U></a>
 
 
 </body>
