--- a/7.Enlaces II.html
+++ b/7.Enlaces II.html
@@ -20,7 +20,7 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus doloremque deleniti ea pariatur modi magnam odit omnis. Dignissimos a illo quia repellendus quae architecto eos, quam nobis perferendis distinctio.</p>
     <a href="#Enlaces II">Volver Arriba</a>
     
-    <h3 id="#Sección 2">Sección 2</h3>
+    <h3 id="Sección 2">Sección 2</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus doloremque deleniti ea pariatur modi magnam odit omnis. Dignissimos a illo quia repellendus quae architecto eos, quam nobis perferendis distinctio.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus doloremque deleniti ea pariatur modi magnam odit omnis. Dignissimos a illo quia repellendus quae architecto eos, quam nobis perferendis distinctio.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor doloribus doloremque deleniti ea pariatur modi magnam odit omnis. Dignissimos a illo quia repellendus quae architecto eos, quam nobis perferendis distinctio.</p>
